// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`settlements with address filter 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xbc18d7b0241882bcfc94b5fe0d520988f2a9f4050a2a1df58c4de14ee23f3915",
        ],
        "blockId": 139,
        "id": "139/1",
        "legs": Array [
          Object {
            "amount": "100",
            "from": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 0,
            },
            "ticker": "4TICKER",
            "to": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 1,
            },
          },
        ],
      },
    ],
    "totalCount": 1,
  },
}
`;

exports[`settlements with from filter 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x445bc6587e10fdb738384afe436aeac71f8b3b43ffa35ad732df57a75af9c631",
        ],
        "blockId": 262,
        "id": "262/1",
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11ATICKER",
            "to": Object {
              "did": "0x6507cde10425d03a8964c5937ccb5760a95d4fd1cda5fc8cdadad8b51e13a38f",
              "number": 0,
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
          "0x6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
          "0xfc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
          "0x3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
        ],
        "blockId": 294,
        "id": "294/5",
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": 0,
            },
            "ticker": "11BTICKER2",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x553aa64ffcf49987f124633a835e6363a413cfbd10fb2b77ad8bf17afc7606ff",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
              "number": 0,
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x9cf9275b33172c4314f15a677f5382346ba4bf984fb86adaadf45eb3f1008442",
        ],
        "blockId": 327,
        "id": "327/1",
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "12TICKER",
            "to": Object {
              "did": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
              "number": 0,
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x7e2b6c2251327adee2637729546e952c183f381712a805db885ebfdd4117b022",
        ],
        "blockId": 354,
        "id": "354/1",
        "legs": Array [
          Object {
            "amount": 100000000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "13TICKER",
            "to": Object {
              "did": "0x6c15581b6ded46773fbb9786b44624fb2d44397f89bfd71b077462c22ac4b72d",
              "number": 0,
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0x16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
        ],
        "blockId": 383,
        "id": "383/6",
        "legs": Array [
          Object {
            "amount": 40,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": 0,
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": 0,
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
        ],
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
        ],
        "blockId": 384,
        "id": "384/6",
        "legs": Array [
          Object {
            "amount": 10,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": 0,
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": 0,
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
        ],
      },
    ],
    "totalCount": 6,
  },
}
`;

exports[`settlements with no filter 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xbc18d7b0241882bcfc94b5fe0d520988f2a9f4050a2a1df58c4de14ee23f3915",
        ],
        "blockId": 139,
        "legs": Array [
          Object {
            "amount": "100",
            "from": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 0,
            },
            "ticker": "4TICKER",
            "to": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 1,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x445bc6587e10fdb738384afe436aeac71f8b3b43ffa35ad732df57a75af9c631",
        ],
        "blockId": 262,
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11ATICKER",
            "to": Object {
              "did": "0x6507cde10425d03a8964c5937ccb5760a95d4fd1cda5fc8cdadad8b51e13a38f",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x88d7277a36fd54d21036137521b95f32d889c4d2c04a6da01a005897870feb72",
          "0x6cd2229cfcefc94ca4fa6e0596576d4d3bdbba6147647570f07b99cf16bbb56e",
          "0xfc804196cdde207010e2c71153bc54699b87b668c6ecdff9f7040992e7c5b461",
          "0x3eace1ba3427aba41c91ae03a47fbc9cba9acc3555e5348a2446a0392996d049",
        ],
        "blockId": 294,
        "legs": Array [
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": 0,
            },
            "ticker": "11BTICKER2",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2795441b98ef5a844c7675df8f6030126a297b898ec2d6029dcf81c72d59e553",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x553aa64ffcf49987f124633a835e6363a413cfbd10fb2b77ad8bf17afc7606ff",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x2fbb6ef977181d14c7714e134cd5382d42e4214aaf81a2e60b57663946b644c5",
              "number": 0,
            },
          },
          Object {
            "amount": 100,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "11BTICKER1",
            "to": Object {
              "did": "0x1c18365371d85ae8662de63bfb0fb90da99b93482e8f043de61ffc83994f8858",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x9cf9275b33172c4314f15a677f5382346ba4bf984fb86adaadf45eb3f1008442",
        ],
        "blockId": 327,
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "12TICKER",
            "to": Object {
              "did": "0x0854afeca045161ef42ba9be94c973f65efc0e8532933500865a1fd655148f6c",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd43593c715fdd31c61141abd04a99fd6822c8558854ccde39a5684e7a56da27d",
          "0x7e2b6c2251327adee2637729546e952c183f381712a805db885ebfdd4117b022",
        ],
        "blockId": 354,
        "legs": Array [
          Object {
            "amount": 100000000,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "13TICKER",
            "to": Object {
              "did": "0x6c15581b6ded46773fbb9786b44624fb2d44397f89bfd71b077462c22ac4b72d",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0x16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
          "0xd2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
        ],
        "blockId": 380,
        "legs": Array [
          Object {
            "amount": 1000,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": 0,
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0x16bc52d9ae4224c6f50ea0e1c2fb1f71aa92bc686d1afa252d7c90b69e037775",
        ],
        "blockId": 383,
        "legs": Array [
          Object {
            "amount": 40,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": 0,
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0xad05ae379784a960d841080123d88b7431bf957a596f0afcea1851902a5f7944",
              "number": 0,
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xd2d8ff9e17bc4fb99e2f55d7828f241a80ad54d8e05dff8fccd39aeaa4d5593f",
        ],
        "blockId": 384,
        "legs": Array [
          Object {
            "amount": 10,
            "from": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
            "ticker": "14TICKER",
            "to": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": 0,
            },
          },
          Object {
            "amount": 0,
            "from": Object {
              "did": "0x43b3e9575f1f5830fe5451bf1caa1fdee5631ef1644ece1d788250ccb7a95144",
              "number": 0,
            },
            "ticker": "14TICKERRAIS",
            "to": Object {
              "did": "0x0500000000000000000000000000000000000000000000000000000000000000",
              "number": 0,
            },
          },
        ],
        "result": "Executed",
      },
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0x301ae89b2d71df51a78bfa5700385a7612bd34cf0a482407eccdafc17ef75121",
        ],
        "blockId": 729,
        "legs": Array [
          Object {
            "amount": "10",
            "from": Object {
              "did": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "number": 0,
            },
            "ticker": "15TICKER",
            "to": Object {
              "did": "0x3ece7406def5b26835178d981c4c4a33e9f1b7a79c4432bff1f381c37308ac2f",
              "number": 1,
            },
          },
        ],
        "result": "Executed",
      },
    ],
    "totalCount": 9,
  },
}
`;

exports[`settlements with ticker filter 1`] = `
Object {
  "settlements": Object {
    "__typename": "SettlementsConnection",
    "nodes": Array [
      Object {
        "__typename": "Settlement",
        "addresses": Array [
          "0xbc18d7b0241882bcfc94b5fe0d520988f2a9f4050a2a1df58c4de14ee23f3915",
        ],
        "blockId": 139,
        "id": "139/1",
        "legs": Array [
          Object {
            "amount": "100",
            "from": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 0,
            },
            "ticker": "4TICKER",
            "to": Object {
              "did": "0xc5e2d554233da63d509ee482dbeed0ddec94dc1d0b45ebfdcdc48bd0928222b1",
              "number": 1,
            },
          },
        ],
      },
    ],
    "totalCount": 1,
  },
}
`;
